--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,9 @@
     <string name="title_activity_home">Home</string>
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
+    <string name="hot">Hot</string>
+    <string name="news">New</string>
+    <string name="random">Random</string>
+    <string name="rising">Rising</string>
+
 </resources>
