--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,9 @@
     <string name="news">New</string>
     <string name="random">Random</string>
     <string name="rising">Rising</string>
+    <string name="search_title">Search</string>
+    <string name="search_hint">Search</string>
+    <string name="prev">Previous</string>
+    <string name="next">Next</string>
 
 </resources>
