--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,6 @@
     <string name="search_hint">Search</string>
     <string name="prev">Previous</string>
     <string name="next">Next</string>
+    <string name="title_activity_comment">Comments</string>
 
 </resources>
