--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,16 +1,13 @@
 <resources>
     <string name="app_name">Reddit by Anindya</string>
-    <string name="title_activity_home">Home</string>
+    <string name="title_activity_home">Android</string>
     <string name="action_settings">Settings</string>
-    <string name="section_format">Hello World from section: %1$d</string>
     <string name="hot">Hot</string>
-    <string name="news">New</string>
-    <string name="random">Random</string>
-    <string name="rising">Rising</string>
     <string name="search_title">Search</string>
     <string name="search_hint">Search</string>
     <string name="prev">Previous</string>
     <string name="next">Next</string>
     <string name="title_activity_comment">Comments</string>
+    <string name="no_comments">This listing has no comments.</string>
 
 </resources>
